--- a/text/style.css
+++ b/text/style.css
@@ -28,7 +28,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(25, 25, 223, 0.568);
+    background: #1919df91;
     
     mix-blend-mode: overlay;
 }
@@ -573,7 +573,7 @@ transform: translateY(-7px);
     
 }
 .jobs div {
-    background: #060b1f;
+    background: transparent;
     text-align: center;
     color: #fff;
     cursor: pointer;
@@ -805,7 +805,7 @@ transform: translateY(-7px);
     
 }
 .contain div{
-    background: #060b1f;
+    background: transparent;
     text-align: center;
     color: #fff;
     cursor: pointer;
@@ -1006,12 +1006,13 @@ transform: translateY(-7px);
   .contain div:hover .ima {
     opacity: 1;
     color: #fff;
+    
    
   }
   
   .contain div:hover .overl {
     opacity: 0.5;
-    background: #060b1f;
+    background:#060b1f;
     color: #fff;
   }
   .te1 {
@@ -1021,6 +1022,7 @@ transform: translateY(-7px);
     position: absolute;
     overflow: hidden;
     top: 60%;
+    background:#060b1f;
      font-weight: 600;
      font-family: 'Bad script';
     left: 50%;
@@ -1029,6 +1031,7 @@ transform: translateY(-7px);
   }
   .tet {
     white-space: nowrap; 
+    background: #060b1f;
     color: white;
     font-size: 20px;
     font-weight: 600;
@@ -1050,7 +1053,7 @@ transform: translateY(-7px);
   
   .port div:hover .overl {
     opacity: 0.5;
-    background: #060b1f;
+    background:#060b1f;
     color: #fff;
   }
   .jobs div:hover .overl {
@@ -1078,7 +1081,7 @@ transform: translateY(-7px);
     
 }
 .port div{
-    background: #060b1f;
+    background:transparent;
     text-align: center;
     color: #fff;
     cursor: pointer;
@@ -1287,7 +1290,7 @@ transform: translateY(-7px);
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #624ada; 
+    background: #1919df91; 
   }
   .music audio{
     position: absolute;
